--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     align-content: stretch;
     padding: 1px;
@@ -28,11 +28,10 @@ body {
 .day {
     background-color: white;
     line-height: 125px;
-    padding: 0px 88px;
+    width: 14%;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-
     align-items: center;
     align-content: stretch;
 }
